# mini-async-log

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  changelog.txt  index.html  params.json
example/: bechmark.cpp  benchmark.cpp  external_severity_change.cpp  overview.cpp  rotation.cpp
example/benchmark/: main.cpp
example/external_severity_change/: main.cpp
example/overview/: main.cpp
example/rotation/: main.cpp
include/mal_log/: backend_cfg.hpp  cfg.hpp  compile_format_validator.hpp  decltype_wrap.hpp  format_tokens.hpp  frontend.hpp  frontend_types.hpp  frontend_types_convenience_funcs_to_current_namespace.hpp  inttypes.h  mal_interface.hpp  mal_log.hpp  mal_private.hpp  mal_strip.hpp  sync_point.hpp  timestamp.hpp  ufo_interface.hpp  ufo_log.hpp  ufo_private.hpp
include/mal_log/extras/: boost_filesystem_list_all_files.hpp
include/mal_log/serialization/: basic_encoder_decoder.hpp  exporter.hpp  fields.hpp  header_data.hpp  importer_exporter.hpp
include/mal_log/util/: atomic.hpp  integer.hpp  integer_bits.h  integer_bits.hpp  integer_bits_detail.hpp  literal.hpp  max_align.hpp  mpsc_hybrid_wait_cfg.hpp  opaque_pod.hpp  processor_pause.hpp  queue_backoff_cfg.hpp  side_effect_assert.hpp  stack_ostream.hpp  static_rdbuf.hpp  system.hpp  variadic_macro_arg_count.hpp
include/ufo_log/: async_to_sync.hpp  backend_cfg.hpp  compile_format_validator.hpp  decltype_wrap.hpp  format_tokens.hpp  frontend.hpp  frontend_types.hpp  frontend_types_convenience_funcs_to_current_namespace.hpp  sync_point.hpp  timestamp.hpp  ufo_interface.hpp  ufo_log.hpp  ufo_private.hpp
include/ufo_log/extras/: boost_filesystem_list_all_files.hpp
include/ufo_log/serialization/: basic_encoder_decoder.hpp  exporter.hpp  fields.hpp  header_data.hpp  importer_exporter.hpp
include/ufo_log/util/: atomic.hpp  chrono.hpp  integer.hpp  integer_bits.h  integer_bits.hpp  integer_bits_detail.hpp  integral_enable_if.hpp  literal.hpp  mpsc_hybrid_wait_cfg.hpp  opaque_pod.hpp  side_effect_assert.hpp  stack_ostream.hpp  static_rdbuf.hpp  system.hpp  thread.hpp
src/mal_log/: async_to_sync.hpp  backend.hpp  backoff_wait.hpp  frontend.cpp  frontend_def.hpp  log_file_register.hpp  log_files.hpp  log_writer.hpp  output.hpp  queue.hpp
src/mal_log/serialization/: byte_stream_convert.hpp  importer.hpp  printf_modifiers.hpp
src/mal_log/util/: aligned_type.hpp  calendar_str.hpp  inttypes.h  mem_printf.hpp  memory_mpmc_bounded.hpp  mpmc_bounded.hpp  mpsc.hpp  mpsc_hybrid_wait.hpp  on_stack_dynamic.hpp  placement_new.hpp  queue_backoff.hpp  raw_circular_buffer.hpp  safe_bool.hpp
src/tiny/: allocator.hpp  backend.hpp  backend_cfg.hpp  byte_stream_convert.hpp  frontend.hpp  frontend_def.hpp  message_decode_and_fwd.hpp  message_encoder.hpp  output.hpp  packed_protocol.hpp  protocol.hpp  tiny.hpp  tiny_interface.hpp  tiny_private.hpp
src/tiny/util/: aligned_type.hpp  atomic.hpp  chrono.hpp  integer.hpp  integer_bits.hpp  integer_bits_detail.hpp  mpsc.hpp  mpsc_hybrid_wait.hpp  on_stack_dynamic.hpp  placement_new.hpp  safe_bool.hpp  spmc.hpp  system.hpp  thread.hpp  variadic_macro_arg_count.hpp
src/ufo_log/: allocator.hpp  async_to_sync.hpp  backend.hpp  backend_cfg.hpp  byte_stream_convert.hpp  compile_format_validator.hpp  decltype_wrap.hpp  format_tokens.hpp  frontend.hpp  frontend_def.hpp  frontend_types.hpp  log_files.hpp  log_writer.hpp  message_decode_and_fwd.hpp  message_encoder.hpp  output.hpp  packed_protocol.hpp  protocol.hpp  queue.hpp  sync_point.hpp  synchonizer.hpp  timestamp.hpp  ufo_interface.hpp  ufo_log.hpp  ufo_private.hpp
src/ufo_log/extras/: boost_filesystem_list_all_files.hpp
src/ufo_log/serialization/: basic_encoder_decoder.hpp  byte_stream_convert.hpp  encoder_decoder.hpp  encoder_decoder_base.hpp  exporter.hpp  fields.hpp  header.hpp  header_data.hpp  importer.hpp  importer_exporter.hpp  integral.hpp  non_integral.hpp  non_numeric.hpp  printf_modifiers.hpp
src/ufo_log/util/: aligned_type.hpp  atomic.hpp  calendar_str.hpp  chrono.hpp  integer.hpp  integer_bits.h  integer_bits.hpp  integer_bits_detail.hpp  integral_enable_if.hpp  literal.hpp  mem_printf.hpp  memory_mpmc_bounded.hpp  mpmc_bounded.hpp  mpsc.hpp  mpsc_hybrid_wait.hpp  on_stack_dynamic.hpp  placement_new.hpp  raw_circular_buffer.hpp  safe_bool.hpp  side_effect_assert.hpp  spmc.hpp  system.hpp  thread.hpp  ufo_snprintf.hpp  variadic_macro_arg_count.hpp
